--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
   },
   "dependencies": {
     "agenda": "^0.9.0",
+    "agenda-ui": "0.0.7",
+    "agendash": "^0.4.0",
+    "body-parser": "^1.17.0",
     "config": "^1.25.1",
-    "express": "^4.15.0"
+    "express": "^4.15.0",
+    "nodemon": "^1.11.0",
+    "request": "^2.80.0"
   }
 }
